Fuentes de Ionic con los componentes para cada vista del proyecto

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,46 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <div>
+        <table align="center">
+            <tr>
+                <td align="center">
+                    <a href="autor"><img src="assets/iconos/v2/autor.png"></a>
+                </td>
+                <td></td>
+                <td align="center">
+                    <a href="libro"><img src="assets/iconos/v2/libro.jpg"></a>
+                </td>
+            </tr>
+            <tr>
+                <td align="center">Libros por autor<br></td>
+                <td></td>
+                <td align="center">Libros por título<br></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td align="center"><br>
+                    <a href="autores"><img src="assets/iconos/v2/autores.png" /></a>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td align="center">Autores</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td align="center">
+                    <a href="presentacion"><img src="assets/iconos/v2/presentacion.png"></a>
+                </td>
+                <td></td>
+                <td align="center">
+                    <a href="orientacion"><img src="assets/iconos/v2/orientacion.png"></a>
+                </td>
+            </tr>
+            <tr>
+                <td align="center">Presentación</td>
+                <td></td>
+                <td align="center">Orientación</td>
+            </tr>
+        </table>
+    </div>
 </ion-content>
