--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,52 @@
 #container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 #container strong {
-  font-size: 20px;
-  line-height: 26px;
+    font-size: 20px;
+    line-height: 26px;
 }
 
 #container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+    font-size: 16px;
+    line-height: 22px;
+    color: #8c8c8c;
+    margin: 0;
 }
 
 #container a {
-  text-decoration: none;
+    text-decoration: none;
+}
+
+table {
+    padding-top: 20px;
+    padding-bottom: 60px;
+    overflow-x: auto;
+    align-items: center;
+    align-self: center;
+}
+
+div {
+    overflow-x: auto;
+}
+
+td img {
+    width: 200px;
+    height: 150px;
+}
+
+td {
+    font-family: "Constantia", serif;
+    font-size: 50px;
+    color: blue;
+}
+
+img {
+    height: auto;
+    width: auto;
 }
