direccionamiento a la API y lista de libros.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,11 +3,11 @@
         <table align="center">
             <tr>
                 <td align="center">
-                    <a href="autor"><img src="assets/iconos/v2/autor.png"></a>
+                    <a href="autores"><img src="assets/iconos/v2/autor.png"></a>
                 </td>
                 <td></td>
                 <td align="center">
-                    <a href="libro"><img src="assets/iconos/v2/libro.jpg"></a>
+                    <a href="libros"><img src="assets/iconos/v2/libro.jpg"></a>
                 </td>
             </tr>
             <tr>
