--- a/src/app/home/libros/libros.component.html
+++ b/src/app/home/libros/libros.component.html
@@ -1,3 +1,12 @@
-<p>
-  libros works!
-</p>
+<ion-list>
+    <ion-item *ngFor="let book of listBooks">
+        <ion-avatar slot="start">
+            <img src="assets/iconos/v2/libro.jpg">
+        </ion-avatar>
+        <ion-label>
+            <h2>{{book.nameBook}}</h2>
+            <!--<h3>Look, kid...</h3>
+      <p>I've got enough on my plate as it is, and I...</p>-->
+        </ion-label>
+    </ion-item>
+</ion-list>
