Actualizaciones pagina principal
Se crea idea de diseño para pagina principal, se arregla header y se crea footer.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,14 @@
 <ion-header [translucent]="true">
-    <ion-toolbar>
-        <ion-title>
-            Kimera App
-        </ion-title>
-    </ion-toolbar>
+<ion-toolbar color="primary">
+        <ion-buttons slot="start">
+          <ion-menu-button auto-hide="false"></ion-menu-button>
+        </ion-buttons>
+        <ion-buttons slot="primary">
+          <ion-button>
+            <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+        <ion-title>Literatura Juvenil</ion-title>
+      </ion-toolbar>
 </ion-header>
+
