--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,7 @@
-<p>
-  footer works!
-</p>
+<ion-content>
+  </ion-content><ion-footer class="ion-no-border">
+    <ion-toolbar>
+      <ion-title>Footer - No Border</ion-title>
+    </ion-toolbar>
+  </ion-footer>
+</ion-content>
