--- a/src/app/home/autor/autor.component.html
+++ b/src/app/home/autor/autor.component.html
@@ -1,3 +1,10 @@
-<p>
-  autor works!
-</p>
+<ion-list>
+  <ion-item *ngFor="let author of listAuthors">
+      <ion-avatar slot="start">
+          <img src="assets/iconos/v2/autor.png">
+      </ion-avatar>
+      <ion-label>
+          <h2>{{author.nameAuthor}}</h2>
+      </ion-label>
+  </ion-item>
+</ion-list>
