Se ingresa el nuevo menu, componentes de libro

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,46 +1,40 @@
-<ion-content [fullscreen]="true">
-    <div>
-        <table align="center">
-            <tr>
-                <td align="center">
-                    <a href="autores"><img src="assets/iconos/v2/autor.png"></a>
-                </td>
-                <td></td>
-                <td align="center">
-                    <a href="libros"><img src="assets/iconos/v2/libro.jpg"></a>
-                </td>
-            </tr>
-            <tr>
-                <td align="center">Libros por autor<br></td>
-                <td></td>
-                <td align="center">Libros por título<br></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><br>
-                    <a href="autores"><img src="assets/iconos/v2/autores.png" /></a>
-                </td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center">Autores</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td align="center">
-                    <a href="presentacion"><img src="assets/iconos/v2/presentacion.png"></a>
-                </td>
-                <td></td>
-                <td align="center">
-                    <a href="orientacion"><img src="assets/iconos/v2/orientacion.png"></a>
-                </td>
-            </tr>
-            <tr>
-                <td align="center">Presentación</td>
-                <td></td>
-                <td align="center">Orientación</td>
-            </tr>
-        </table>
-    </div>
-</ion-content>
+<body>
+    <center><ion-app>
+      <ion-content fullscreen>
+         <a href="autores"><ion-card>
+          <img src="assets/aa.jpg" />
+          <ion-card-header>
+            <ion-card-title>Libros por titulo</ion-card-title>
+          </ion-card-header>
+        </ion-card></a>
+  
+        <a href="libros"><ion-card>
+          <img src="assets/iconos/v2/autor.png" />
+          <ion-card-header>
+            <ion-card-title>Libros por autor</ion-card-title>
+          </ion-card-header>
+        </ion-card></a>
+  
+        <a href="autor"><ion-card>
+          <img src="assets/iconos/v2/autores.png" />
+          <ion-card-header>
+            <ion-card-title>Autores</ion-card-title>
+          </ion-card-header>
+        </ion-card></a>
+  
+        <a href="presentacion"><ion-card>
+          <img src="assets/iconos/v2/presentacion.png" />
+          <ion-card-header>
+            <ion-card-title>Presentación</ion-card-title>
+          </ion-card-header>
+        </ion-card></a>
+  
+        <a href="orientacion"><ion-card>
+        <img src="assets/iconos/v2/orientacion.png" />
+        <ion-card-header>
+          <ion-card-title>Orientación</ion-card-title>
+        </ion-card-header>
+      </ion-card></a>
+    </ion-content>
+    </ion-app></center>
+  </body>
