--- a/src/app/home/view-capitulo/view-capitulo.component.html
+++ b/src/app/home/view-capitulo/view-capitulo.component.html
@@ -1,60 +1,19 @@
-<body>
-  <center><ion-app>
-    <ion-content fullscreen>
-       <ion-card>
-        <img src="assets/aa.jpg" />
-        <ion-card-header>
-          <ion-card-title>Libros por titulo</ion-card-title>
-        </ion-card-header>
-      </ion-card>
-
-       <!--<ion-card>
-        <img src="assets/iconos/v2/autor.png" />
-        <ion-card-header>
-          <ion-card-title>Libros por autor</ion-card-title>
-        </ion-card-header>
-      </ion-card>-->
-
-      <ion-card>
-        <img src="assets/iconos/v2/autores.png" />
-        <ion-card-header>
-          <ion-card-title>Autores</ion-card-title>
-        </ion-card-header>
-      </ion-card>
-
-      <ion-card>
-        <img src="assets/iconos/v2/presentacion.png" />
-        <ion-card-header>
-          <ion-card-title>Presentación</ion-card-title>
-        </ion-card-header>
-      </ion-card>
-
-    <ion-card>
-      <img src="assets/iconos/v2/orientacion.png" />
-      <ion-card-header>
-        <ion-card-title>Orientación</ion-card-title>
-      </ion-card-header>
-    </ion-card>
-  </ion-content>
-  </ion-app></center>
-
-
-</body>
-<br><br><br>
+<ion-app>
 <ion-list>
   <a href=""><ion-item>
     <ion-label>Cap1</ion-label>
   </ion-item></a>
-  <ion-item>
+  <a href=""></a><ion-item>
     <ion-label>Cap2</ion-label>
-  </ion-item>
-  <ion-item>
+  </ion-item></a>
+  <a href=""></a><ion-item>
     <ion-label>Cap3</ion-label>
-  </ion-item>
-  <ion-item>
+    <a href=""></ion-item></a>
+      <a href=""><ion-item>
     <ion-label>Cap4</ion-label>
-  </ion-item>
-  <ion-item>
+    <a href=""></ion-item></a>
+      <a href=""><ion-item>
     <ion-label>Cap5</ion-label>
-  </ion-item>
+  </ion-item></a>
 </ion-list>
+</ion-app>
