--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,20 +2,19 @@
 <ion-menu side="start" menuId="first" contentId="main">
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-title>Menu principal</ion-title>
+        <a href="../../home"><ion-title>Menu principal</ion-title></a>
       </ion-toolbar>
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
+        <a href=""><ion-item>Libros</ion-item></a>
+        <a href=""><ion-item>Autores</ion-item></a>
+        <a href=""><ion-item>Presentación</ion-item></a>
+        <!--<a href=""><ion-item>Menu Item</ion-item></a>-->
+        <a href=""><ion-item>Configuración</ion-item></a>
       </ion-list>
     </ion-content>
   </ion-menu>
-  
 
 <!--MENU LATERAL DERECHA-->
 <ion-menu side="end" type="push" contentId="main">
@@ -26,7 +25,7 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-item>Menu Item</ion-item>
+        <ion-item></ion-item>
         <ion-item>Menu Item</ion-item>
         <ion-item>Menu Item</ion-item>
         <ion-item>Menu Item</ion-item>
