--- a/src/app/home/capitulos/capitulos.component.html
+++ b/src/app/home/capitulos/capitulos.component.html
@@ -1,3 +1,10 @@
-<p>
-  capitulos works!
-</p>
+<ion-list>
+  <ion-item *ngFor="let chapter of listChapters">
+      <ion-avatar slot="start">
+          <img src="assets/iconos/v2/libro.jpg">
+      </ion-avatar>
+      <ion-label>
+          <h2>{{chapters.tittleChapter}}</h2>
+      </ion-label>
+  </ion-item>
+</ion-list>
