--- a/src/app/home/view-capitulo/view-capitulo.component.scss
+++ b/src/app/home/view-capitulo/view-capitulo.component.scss
@@ -1,14 +1,3 @@
-ion-card{
-    top: 65px;
-    background-color: #3880ff;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 2%;
-    max-width: 500px;
-    max-height: auto;
-    display: inline-block;
-}
-img{
-    width: 600px;
-    height: 300px;
+ion-app{
+    top:65px;
 }
