--- a/src/app/home/autor/autor.component.html
+++ b/src/app/home/autor/autor.component.html
@@ -1,10 +1,13 @@
 <ion-list>
   <ion-item *ngFor="let author of listAuthors">
+    <span (click)="selectItem(author)">
       <ion-avatar slot="start">
-          <img src="assets/iconos/v2/autor.png">
+        <img src="assets/iconos/v2/autor.png">
       </ion-avatar>
       <ion-label>
-          <h2>{{author.nameAuthor}}</h2>
+        <h2>{{author.nameAuthor}}</h2>
       </ion-label>
+    </span>
+
   </ion-item>
 </ion-list>
