--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,7 +2,7 @@
     <center><ion-app>
       <ion-content fullscreen>
          <a href="autores"><ion-card>
-          <img src="assets/aa.jpg" />
+          <img src="assets/iconos/v2/aa.jpg" />
           <ion-card-header>
             <ion-card-title>Libros por titulo</ion-card-title>
           </ion-card-header>
