--- a/src/app/home/quiz/quiz.component.html
+++ b/src/app/home/quiz/quiz.component.html
@@ -1,15 +1,16 @@
-  <div *ngIf="listBooks.length > 0">
-    <ion-list>
-      <ion-item *ngFor="let book of listBooks">
-          <ion-avatar slot="start">
-              <img src="assets/iconos/v2/libro.jpg">
-          </ion-avatar>
-          <ion-label>
-              <h2>{{book.nameBook}}</h2>
-              <!--<h3>Look, kid...</h3>
-        <p>I've got enough on my plate as it is, and I...</p>-->
-          </ion-label>
-      </ion-item>
-  </ion-list>
-  </div>
+
   
+  <div *ngIf="listBooks.length > 0">
+    <center><ion-app>
+          <ion-content fullscreen>
+            <a href="pregunta">
+            <ion-card *ngFor="let book of listBooks">
+            <img src="assets/iconos/v2/libro.jpg" />
+            <ion-card-header >
+              <ion-card-title><h2>{{book.nameBook}}</h2></ion-card-title>
+            </ion-card-header>
+          </ion-card></a>
+    
+        </ion-content>
+        </ion-app></center>
+      </div>
