archivos de alimentacion de base de datos
de realiza creacion de archivos .json de question y answer para ser dejados en la carpeta assets /Question. Estos archivos contienen las preguntas y las respuestas para ser alimentados a la base de datos de las respectivas tablas en SQL

--- a/src/app/home/quiz/preguntas/preguntas/preguntas.component.html
+++ b/src/app/home/quiz/preguntas/preguntas/preguntas.component.html
@@ -1,7 +1,5 @@
-
-<body>
 <br>
-  <ion-list>
+<ion-list>
     <ion-radio-group value="biff">
       <ion-list-header>
         <ion-label>Quien fue primero</ion-label>
@@ -9,41 +7,22 @@
   
       <ion-item>
         <ion-label>El huevo</ion-label>
-        <ion-radio slot="start" value="biff"></ion-radio>
+        <ion-radio></ion-radio>
       </ion-item>
   
       <ion-item>
         <ion-label>La gallina</ion-label>
-        <ion-radio slot="start" value="griff"></ion-radio>
+        <ion-radio></ion-radio>
       </ion-item>
   
       
     </ion-radio-group>
   </ion-list>
 
-  <ion-list>
-    <ion-radio-group value="biff">
-      <ion-list-header>
-        <ion-label>Porque los pollos dicen pio</ion-label>
-      </ion-list-header>
-  
-      <ion-item>
-        <ion-label>porque tienen hambre</ion-label>
-        <ion-radio slot="start" value="biff"></ion-radio>
-      </ion-item>
-  
-      <ion-item>
-        <ion-label>porque tienen frio</ion-label>
-        <ion-radio slot="start" value="griff"></ion-radio>
-      </ion-item>
-  
-      
-    </ion-radio-group>
-  </ion-list>
+ 
 
 
 
   <ion-button (click)="presentActionSheet()"> Calificar</ion-button>
 
   
-</body>
