componente listado por autor agregado y enrutado

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
         <table align="center">
             <tr>
                 <td align="center">
-                    <a href="autores"><img src="assets/iconos/v2/autor.png"></a>
+                    <a href="autorLista"><img src="assets/iconos/v2/autor.png"></a>
                 </td>
                 <td></td>
                 <td align="center">
