--- a/src/app/home/capitulos/capitulos.component.html
+++ b/src/app/home/capitulos/capitulos.component.html
@@ -1,4 +1,4 @@
-<ion-list>
+<br><br><br><br><ion-list>
   <ion-item *ngFor="let chapter of listChapters">
       <ion-avatar slot="start">
           <img src="assets/iconos/v2/libro.jpg">
