--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,5 @@
-<ion-content>
-  </ion-content><ion-footer class="ion-no-border">
+<ion-footer class="ion-no-border">
     <ion-toolbar>
       <ion-title>Footer - No Border</ion-title>
     </ion-toolbar>
-  </ion-footer>
-</ion-content>
+</ion-footer>
