agrego de ion content
se agregaron ion content en los componentes orientacion y presentacion para facil navegacion del contenido

--- a/src/app/home/orientacion/orientacion.component.html
+++ b/src/app/home/orientacion/orientacion.component.html
@@ -1,3 +1,4 @@
+<ion-content>
 <h1>Orientación a Padres y Maestros</h1>
 <p>
     La serie Biblioteca Electrónica Digital, ofrece a niños y niñas la posibilidad de llegar a lo más clásico de la Literatura Universal de una manera fácil y amena. Tanto para cumplir las actividades que emanan del aula como para satisfacer el propio placer
@@ -10,3 +11,4 @@
 <a href="home" text-align="center">
     <h3>Volver</h3>
 </a>
+</ion-content>
