--- a/src/app/home/presentacion/presentacion.component.html
+++ b/src/app/home/presentacion/presentacion.component.html
@@ -1,3 +1,4 @@
+<ion-content>
 <h2>Presentación</h2>
 
 <br>
@@ -14,3 +15,4 @@
 <a href="home" text-align="center">
     <h3>Volver</h3>
 </a>
+</ion-content>
