--- a/src/app/home/quiz/preguntas/preguntas/preguntas.component.html
+++ b/src/app/home/quiz/preguntas/preguntas/preguntas.component.html
@@ -1,9 +1,5 @@
 
-<ion-content
-[scrollEvents]="true"
-(ionScrollStart)="logScrollStart()"
-(ionScroll)="logScrolling($event)"
-(ionScrollEnd)="logScrollEnd()">
+<ion-content>
   <h1>Main Content</h1>
 
   <div slot="fixed">
@@ -15,7 +11,7 @@
 <ion-list>
     <ion-radio-group value="biff" *ngFor="let ex of listQuestions" >
       <ion-list-header *ngIf="idBook==ex.idBook">
-        <ion-label>{{ex.textQuestion}}</ion-label>
+        <ion-label><h2><b>{{ex.textQuestion}}</b></h2></ion-label>
       </ion-list-header>
       
       <div *ngFor="let exr of listAnswers">
