ajustes de ion content
se aplica los ajustes de contenido para la barra de desplazamiento en orientacion y presentacion.
En quiz se adiciono boton para regresar al inicio

--- a/src/app/home/quiz/preguntas/preguntas/preguntas.component.html
+++ b/src/app/home/quiz/preguntas/preguntas/preguntas.component.html
@@ -16,7 +16,7 @@
       
       <div *ngFor="let exr of listAnswers">
       <ion-item *ngIf="exr.idQuestion==ex.idQuestion">
-        <ion-label>{{exr.textAnswer}}</ion-label>
+        <ion-label ><h3>{{exr.textAnswer}}</h3></ion-label>
         <ion-radio ></ion-radio>
       </ion-item>
       </div>
