--- a/src/app/home/quiz/preguntas/preguntas/preguntas.component.scss
+++ b/src/app/home/quiz/preguntas/preguntas/preguntas.component.scss
@@ -12,3 +12,8 @@
     text-align: center;
     size: 20%;
   }
+  h3{
+    text-align: left;
+    //justify-content: space-around;
+    size: 10%;
+  }
