Arreglos de vista de contenidos

--- a/src/app/home/view-capitulo/view-capitulo.component.html
+++ b/src/app/home/view-capitulo/view-capitulo.component.html
@@ -1,4 +1,4 @@
-<ion-app>
+<ion-content>
 <ion-list>
   <a href=""><ion-item>
     <ion-label>Cap1</ion-label>
@@ -16,4 +16,4 @@
     <ion-label>Cap5</ion-label>
   </ion-item></a>
 </ion-list>
-</ion-app>
+</ion-content>
