--- a/src/app/home/autor/autor.component.html
+++ b/src/app/home/autor/autor.component.html
@@ -1,3 +1,4 @@
+<ion-content>
 <ion-list>
   <ion-item *ngFor="let author of listAuthors">
     <span (click)="selectItem(author)">
@@ -11,3 +12,4 @@
 
   </ion-item>
 </ion-list>
+</ion-content>
