--- a/src/app/home/libros/libros.component.html
+++ b/src/app/home/libros/libros.component.html
@@ -1,3 +1,4 @@
+<ion-content>
 <ion-list>
     <ion-item *ngFor="let book of listBooks">
         <ion-avatar slot="start">
@@ -8,3 +9,4 @@
         </ion-label>
     </ion-item>
 </ion-list>
+</ion-content>
