--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,20 @@
-<center><ion-app>
+<center>
     <ion-content fullscreen>
-       <a href="autores"><ion-card>
+       <a href="libros"><ion-card>
         <img src="assets/aa.jpg" />
         <ion-card-header>
           <ion-card-title>Libros por titulo</ion-card-title>
         </ion-card-header>
       </ion-card></a>
 
-      <a href="libros"><ion-card>
+      <a href="autorLista"><ion-card>
         <img src="assets/iconos/v2/autor.png" />
         <ion-card-header>
           <ion-card-title>Libros por autor</ion-card-title>
         </ion-card-header>
       </ion-card></a>
 
-      <a href="autor"><ion-card>
+      <a href="autores"><ion-card>
         <img src="assets/iconos/v2/autores.png" />
         <ion-card-header>
           <ion-card-title>Autores</ion-card-title>
@@ -35,4 +35,4 @@
       </ion-card-header>
     </ion-card></a>
   </ion-content>
-  </ion-app></center>
+ </center>
