--- a/src/app/home/capitulos/capitulos.component.html
+++ b/src/app/home/capitulos/capitulos.component.html
@@ -1,12 +1,14 @@
 <ion-content>
     <ion-list>
-    <ion-item *ngFor="let chapter of listChapters">
-        <ion-avatar slot="start">
-            <img src="assets/iconos/v2/libro.jpg">
-        </ion-avatar>
-        <ion-label>
-            <h2>{{chapters.tittleChapter}}</h2>
-        </ion-label>
-    </ion-item>
+        <ion-item *ngFor="let chapters of listChapters">
+            <ion-item-option (click)="selectItem(chapters)">
+                <ion-avatar slot="start">
+                    <img src="assets/iconos/v2/libro.jpg">
+                </ion-avatar>
+                <ion-label>
+                    <h2>{{chapters.titleChapter}}</h2>
+                </ion-label>
+            </ion-item-option>
+        </ion-item>
     </ion-list>
 </ion-content>
