--- a/src/app/home/capitulos/capitulos.component.scss
+++ b/src/app/home/capitulos/capitulos.component.scss
@@ -1,3 +1,17 @@
 ion-content{
     top: 6%;
+    text-align: center;
+}
+
+ion-list{
+    display: inline-block;    
+}
+
+ion-item-option{
+    background-color: white;
+    color: black;
+}
+
+ion-label{
+    text-transform: none;
 }
