--- a/src/app/home/libros/libros.component.html
+++ b/src/app/home/libros/libros.component.html
@@ -1,12 +1,14 @@
 <ion-content>
     <ion-list>
         <ion-item *ngFor="let book of listBooks">
-            <ion-avatar slot="start">
-                <img src="assets/iconos/v2/libro.jpg">
-            </ion-avatar>
-            <ion-label>
-                <h2>{{book.nameBook}}</h2>
-            </ion-label>
+            <span (click)="selectItem(book)">
+                <ion-avatar slot="start">
+                    <img src="assets/iconos/v2/libro.jpg">
+                </ion-avatar>
+                <ion-label>
+                    <h2>{{book.nameBook}}</h2>
+                </ion-label>
+            </span>
         </ion-item>
     </ion-list>
 </ion-content>
