--- a/src/app/home/lista-autor/lista-autor.component.html
+++ b/src/app/home/lista-autor/lista-autor.component.html
@@ -1,12 +1,14 @@
-<ion-list>
-  <ion-item *ngFor="let author of listAuthors">
-    <span (click)="selectItem(author)">
-      <ion-avatar slot="start">
-        <img src="assets/iconos/v2/autor.png">
-      </ion-avatar>
-      <ion-label>
-        <h2>{{author.nameAuthor}}</h2>
-      </ion-label>
-    </span>
-  </ion-item>
-</ion-list>
+<ion-content>
+  <div>
+    <ion-card *ngFor="let author of listAuthors" align="center">
+      <span (click)="selectItem(author)">
+        <tr slot="start">
+          <td align="center"><img src="assets/iconos/v2/autor.png"></td>
+        </tr>
+        <tr slot="start">
+          <td align="center">{{author.nameAuthor}}</td>
+        </tr>
+      </span>
+    </ion-card>
+  </div>
+</ion-content>
