eliminacion temporal de codigo en preguntas.html
se elimino el ngmodel para evitar errores

--- a/src/app/home/quiz/preguntas/preguntas/preguntas.component.html
+++ b/src/app/home/quiz/preguntas/preguntas/preguntas.component.html
@@ -29,7 +29,7 @@
     -->
     <ion-list *ngFor="let pregunta of questionsList">
       <div *ngIf="idBook==pregunta.idBook">
-        <ion-radio-group [(ngModel)]="respuesta.selectedAnswer" (click)="valueChanged()"><!-- pregunta.selectedAnswer-->
+        <ion-radio-group ><!-- pregunta.selectedAnswer-->
           <ion-list-header >
             <ion-label><h2><b>{{pregunta.textQuestion}}</b></h2></ion-label>
           </ion-list-header>
