--- a/src/app/home/biografia/biografia.component.html
+++ b/src/app/home/biografia/biografia.component.html
@@ -1,7 +1,12 @@
-<p *ngIf="biografia">
-  <br>
-  <br>
-  <br>
-  {{biografia.author.biography}}
-
-</p>
+<ion-content>
+  <body>
+  <a href="autores"><img src="assets/iconos/v2/autores.png" /></a>
+  
+    <p *ngIf="biografia">
+      <br>
+      <br>
+      <br>
+      {{biografia.author.biography}}
+    </p>
+  </body>
+</ion-content>
