funcionalidad en calificacion y arreglo de BD
se agrega la funcionalidad de calificar y el nombre del libro en el componente de calificar.
Se corrigieron errores de id en las respuestas de AnswerDB.json.

--- a/src/app/home/quiz/calificacion/calificacion.component.html
+++ b/src/app/home/quiz/calificacion/calificacion.component.html
@@ -5,9 +5,9 @@
          
           <img src="assets/iconos/v2/libro.jpg" />
           <ion-card-header>
-            <ion-card-subtitle><h3>Su calificación en el libro: _   es de:</h3></ion-card-subtitle>
+            <ion-card-subtitle><h3>Su calificación en el libro:</h3> <h4>{{nameBuk}} </h4>  <h3>es de:</h3></ion-card-subtitle>
             <ion-card-title>
-              <h2>Algo / 5</h2>
+              <h2>{{conteoHijo}} / 5</h2>
             </ion-card-title>
           </ion-card-header>
           
