--- a/src/app/home/quiz/preguntas/preguntas/preguntas.component.html
+++ b/src/app/home/quiz/preguntas/preguntas/preguntas.component.html
@@ -1,6 +1,6 @@
 
 <ion-content>
-
+<div><h1></h1></div>
   
 
   <div *ngIf="!calificar&&!home&&!quiz">
@@ -29,7 +29,7 @@
     -->
     <ion-list *ngFor="let pregunta of questionsList">
       <div *ngIf="idBook==pregunta.idBook">
-        <ion-radio-group ><!-- pregunta.selectedAnswer-->
+        <ion-radio-group (ionChange)="valueChanged($event)">
           <ion-list-header >
             <ion-label><h2><b>{{pregunta.textQuestion}}</b></h2></ion-label>
           </ion-list-header>
@@ -50,7 +50,7 @@
     <ion-button (click)="presentActionSheet()"> Calificar</ion-button>
   </div>
   <div *ngIf="calificar">
-    <app-calificacion></app-calificacion>
+    <app-calificacion [conteoHijo]="conteo2" [idBook]="idBook"></app-calificacion>
   </div>
   <div *ngIf="quiz">
     <app-quiz></app-quiz>
