--- a/src/app/home/quiz/calificacion/calificacion.component.html
+++ b/src/app/home/quiz/calificacion/calificacion.component.html
@@ -12,7 +12,7 @@
           </ion-card-header>
           
           <ion-card-content>
-            <a href="home" text-align="center"><ion-button> Menu Principal</ion-button></a>
+            <a href="quiz" text-align="center"><ion-button> Menu Principal</ion-button></a>
           </ion-card-content>
       </ion-card>
     </ion-content>
