--- a/src/app/home/libros/libros.component.html
+++ b/src/app/home/libros/libros.component.html
@@ -1,14 +1,12 @@
 <ion-content>
-    <ion-list>
-        <ion-item *ngFor="let book of listBooks">
+    <div>
+        <ion-card *ngFor="let book of listBooks">
             <span (click)="selectItem(book)">
-                <ion-avatar slot="start">
-                    <img src="assets/iconos/v2/libro.jpg">
-                </ion-avatar>
-                <ion-label>
-                    <h2>{{book.nameBook}}</h2>
-                </ion-label>
+                <img src="assets/iconos/v2/libro.jpg">
+                <ion-card-header>
+                    <ion-card-title>{{book.nameBook}}</ion-card-title>
+                </ion-card-header>
             </span>
-        </ion-item>
-    </ion-list>
+        </ion-card>
+    </div>
 </ion-content>
