--- a/src/app/home/libros/libros.component.scss
+++ b/src/app/home/libros/libros.component.scss
@@ -1,4 +1,28 @@
 ion-content{
     top: 6%;
+    margin-top: 6%;
     bottom: 6%;
+    text-align: center;
+}
+
+:host{
+    --ion-background-color: rgb(183, 197, 250);
+}
+
+ion-card-tittle{
+    color: black;
+}
+
+img{
+    width: 300px;
+    height: 300px;
+}
+
+ion-card{
+    background-color: #5598fcfd;
+    margin-left: 3%;
+    margin-right: 3%;
+    max-width: auto;
+    max-height: auto;
+    display: inline-flex;
 }
