--- a/src/app/home/view-capitulo/view-capitulo.component.scss
+++ b/src/app/home/view-capitulo/view-capitulo.component.scss
@@ -1,3 +1,13 @@
+:host{
+--ion-background-color: rgb(218, 20, 20);
+}
+
 ion-content{
-    top: 7%;
+    top: 6%;
+    margin-top: 6%;
+}
+
+h1{
+text-align: center;
+margin-bottom: 5%;
 }
