--- a/src/app/home/view-capitulo/view-capitulo.component.html
+++ b/src/app/home/view-capitulo/view-capitulo.component.html
@@ -1,6 +1,4 @@
-<ion-app>
-<ion-content *ngIf="chapters">
+<ion-content fullscreen *ngIf="chapters">
         <h1>{{chapters.chapter.titleChapter}}</h1>
         <p>{{chapters.chapter.textChapter}}</p>
 </ion-content>
-</ion-app>
