--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,3 +1,13 @@
+ion-toolbar{
+    --ion-background-color:#585FA6;
+    color: white;
+}
+
+ion-menu{
+    --ion-background-color: #fff;
+    --ion-text-color:black;
+}
+
 a{
     color: white;
     text-decoration:none
