--- a/src/app/home/autor/autor.component.scss
+++ b/src/app/home/autor/autor.component.scss
@@ -1,26 +1,27 @@
 ion-content{
-    top: 8%;
- }
+    margin-top: 500px;
+    top: 4%;
+    text-align: center;
+}
+
+:host{
+    --ion-background-color: #ECF3FF;
+}
+
+ion-card-header{
+    background-color: #585FA6;
+}
+
+ion-card{
+    background-color: #585FA6;
+    margin: 3%;
+    max-width: auto;
+    max-height: auto;
+    border-radius: 6%;
+    display: inline-flex;
+}
  
- div{
-     background-color: rgb(162, 205, 255);
-     margin-bottom: 3%; 
- }
- 
- ion-card{
-     background-color: #5598fcfd;
-     margin-left: 5%;
-     margin-right: 5%;
-     margin-bottom: 2%;
-     max-width: auto;
-     max-height: auto;
-     display: inline-flex;
- }
- 
- img{
+img{
      width: 300px;
      height: 300px;
- }
- td{
-     color: #000;
- }
+}
