--- a/src/app/home/biografia/biografia.component.html
+++ b/src/app/home/biografia/biografia.component.html
@@ -1,12 +1,9 @@
-<ion-content>
-  <body>
-  <a href="autores"><img src="assets/iconos/v2/autores.png" /></a>
-  
-    <p *ngIf="biografia">
-      <br>
-      <br>
-      <br>
+<ion-content fullscreen *ngIf="biografia">
+  <center><img src="assets/iconos/v2/autores.png"></center>
+  <br><br><br>
+  <h1>{{biografia.author.nameAuthor}}</h1>
+  <br><br>
+    <p>
       {{biografia.author.biography}}
     </p>
-  </body>
 </ion-content>
