--- a/src/app/home/biografia/biografia.component.scss
+++ b/src/app/home/biografia/biografia.component.scss
@@ -1,27 +1,32 @@
-p {
+h1{
+    text-align: center;
     font-family: "Constantia", serif;
-    font-size: 25px;
-    color: rgb(0, 29, 10);
-    margin: 0% 15%;
-    overflow-x: auto;
-    align-items: center;
-    align-self: center;
-    text-align: justify;
+    font-size: 35px;
 }
-body{
 
-    background-color: rgba(115, 212, 147, 0.493);
-    
+p {
+background-color: #b6252579;
+font-family: "Constantia", serif;
+font-size: 25px;
+color: rgb(0, 29, 10);
+margin: 0% 10%;
+align-items: center;
+align-self: center;
+text-align: justify;
+}
+
+:host{
+    --ion-background-color:rgba(115, 212, 147, 0.493);
 }
 
 img {
     width: 200px;
     height: 250px;
-    margin: 0% 40%;
-    padding-top: 100px;
+    margin-top: 3%;
 }   
 
 ion-content{
     top: 6%;
+    margin-top: 6%;
 }
 
