--- a/src/app/home/capitulos/capitulos.component.scss
+++ b/src/app/home/capitulos/capitulos.component.scss
@@ -1,14 +1,22 @@
 ion-content{
-    top: 6%;
+    top: 10%;
+    margin-top: 7%;
     text-align: center;
 }
 
 :host{
-    --ion-background-color: rgb(183, 197, 250);
+    --ion-background-color: #ECF3FF;
 }
 
-ion-card-tittle{
-    color: black;
+ion-card-title{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    color: #ECF3FF;
+}
+
+ion-card-header{
+    background-color: #3F70BA;
 }
 
 img{
@@ -17,7 +25,9 @@ img{
 }
 
 ion-card{
-    background-color: #5598fcfd;
+    cursor: pointer;
+    border-radius: 6%;
+    background-color: #84A2CF;
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: 2%;
