--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,47 +1,57 @@
-  <center><ion-app>
-      <ion-content fullscreen>
-         <a href="libros"><ion-card>
-          <img src="assets/iconos/v2/aa.jpg" />
-          <ion-card-header>
-            <ion-card-title>Libros por titulo</ion-card-title>
-          </ion-card-header>
-        </ion-card></a>
-  
-        <a href="autorLista"><ion-card>
-          <img src="assets/iconos/v2/autor.png" />
-          <ion-card-header>
-            <ion-card-title>Libros por autor</ion-card-title>
-          </ion-card-header>
-        </ion-card></a>
-  
-        <a href="autores"><ion-card>
-          <img src="assets/iconos/v2/autores.png" />
-          <ion-card-header>
-            <ion-card-title>Autores</ion-card-title>
-          </ion-card-header>
-        </ion-card></a>
-  
-        <a href="presentacion"><ion-card>
-          <img src="assets/iconos/v2/presentacion.png" />
-          <ion-card-header>
-            <ion-card-title>Presentación</ion-card-title>
-          </ion-card-header>
-        </ion-card></a>
-  
-        <a href="orientacion"><ion-card>
-        <img src="assets/iconos/v2/orientacion.png" />
+<ion-content fullscreen>
+
+    <a href="libros">
+      <ion-card>
+        <img src="assets/iconos/v2/aa.jpg" />
         <ion-card-header>
-          <ion-card-title>Orientación</ion-card-title>
+          <ion-card-title>Libros por titulo</ion-card-title>
         </ion-card-header>
-      </ion-card></a>
+      </ion-card>
+    </a>
 
-      <a href="quiz"><ion-card>
-        <img src="assets/iconos/bodyPrincipal/Quiz.png" />
-        <ion-card-header>
-          <ion-card-title>Evaluación</ion-card-title>
-        </ion-card-header>
-      </ion-card></a>
+  <a href="autorLista">
+    <ion-card>
+      <img src="assets/iconos/v2/autor.png" />
+      <ion-card-header>
+        <ion-card-title>Libros por autor</ion-card-title>
+      </ion-card-header>
+    </ion-card>
+  </a>
 
-    </ion-content>
-  </ion-app></center>
+  <a href="autores">
+    <ion-card>
+      <img src="assets/iconos/v2/autores.png" />
+      <ion-card-header>
+        <ion-card-title>Autores</ion-card-title>
+      </ion-card-header>
+    </ion-card>
+  </a>
 
+  <a href="presentacion">
+    <ion-card>
+      <img src="assets/iconos/v2/presentacion.png" />
+      <ion-card-header>
+        <ion-card-title>Presentación</ion-card-title>
+      </ion-card-header>
+    </ion-card>
+  </a>
+
+  <a href="quiz">
+    <ion-card>
+      <img src="assets/iconos/v2/ev2.png" />
+      <ion-card-header>
+        <ion-card-title>Evaluación</ion-card-title>
+      </ion-card-header>
+    </ion-card>
+  </a>
+
+  <a href="orientacion">
+    <ion-card>
+      <img src="assets/iconos/v2/orio.jpg" />
+>     <ion-card-header>
+        <ion-card-title>Orientación</ion-card-title>
+      </ion-card-header>
+    </ion-card>
+  </a>
+
+</ion-content>
