--- a/src/app/home/libros/libros.component.scss
+++ b/src/app/home/libros/libros.component.scss
@@ -1,16 +1,23 @@
 ion-content{
-    top: 6%;
+    top: 8%;
     margin-top: 6%;
     bottom: 6%;
     text-align: center;
 }
 
 :host{
-    --ion-background-color: rgb(183, 197, 250);
+    --ion-background-color: #ECF3FF;
 }
 
-ion-card-tittle{
-    color: black;
+ion-card-header{
+    background-color: #585FA6;
+}
+
+ion-card-title{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    color: #ECF3FF;
 }
 
 img{
@@ -18,11 +25,13 @@ img{
     height: 300px;
 }
 
-ion-card{
-    background-color: #5598fcfd;
+ion-card{ 
+    cursor: pointer;
+    display: inline-flex;
+    background-color: #9b9fbd;
     margin-left: 3%;
     margin-right: 3%;
-    max-width: auto;
-    max-height: auto;
-    display: inline-flex;
+    max-width: 300px;
+    max-height: 600px;
+    border-radius: 5%;
 }
