--- a/src/app/home/orientacion/orientacion.component.html
+++ b/src/app/home/orientacion/orientacion.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content fullscreen>
 <h1>Orientación a Padres y Maestros</h1>
 <p>
     La serie Biblioteca Electrónica Digital, ofrece a niños y niñas la posibilidad de llegar a lo más clásico de la Literatura Universal de una manera fácil y amena. Tanto para cumplir las actividades que emanan del aula como para satisfacer el propio placer
