--- a/src/app/home/presentacion/presentacion.component.scss
+++ b/src/app/home/presentacion/presentacion.component.scss
@@ -1,3 +1,22 @@
 ion-content{
     top: 6%;
+    margin-top: 6%;
+}
+
+:host{
+    --ion-background-color: #ECF3FF;
+}
+
+h1{
+    margin-top: 50px;
+    text-align: center;
+    font-family: "Constantia", serif;
+    font-size: 35px;
+    margin-bottom: 5%;
+}
+
+p {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    margin-right: 10%;
 }
