--- a/src/app/home/view-capitulo/view-capitulo.component.scss
+++ b/src/app/home/view-capitulo/view-capitulo.component.scss
@@ -1,5 +1,5 @@
 :host{
---ion-background-color: rgb(218, 20, 20);
+    --ion-background-color: #ECF3FF;
 }
 
 ion-content{
@@ -8,6 +8,20 @@ ion-content{
 }
 
 h1{
-text-align: center;
-margin-bottom: 5%;
+    margin-top: 50px;
+    text-align: center;
+    font-family: "Constantia", serif;
+    font-size: 35px;
+    margin-bottom: 5%;
+}
+
+p {
+    background-color: #b6252579;
+    font-family: "Constantia", serif;
+    font-size: 25px;
+    color: rgb(0, 29, 10);
+    margin: 0% 10%;
+    align-items: center;
+    align-self: center;
+    text-align: justify;
 }
